--- a/AspNetMVCEgitim/EgitimNotlari/multi-column-forms.html
+++ b/AspNetMVCEgitim/EgitimNotlari/multi-column-forms.html
@@ -11,51 +11,54 @@
             <div class="form-group row">
                 <div class="col-lg-4">
                     <label>Full Name:</label>
-                    <input type="email" class="form-control" placeholder="Enter full name" />
+                    <input type="text" class="form-control" placeholder="Enter full name" />
                     <span class="form-text text-muted">Please enter your full name</span>
                 </div>
                 <div class="col-lg-4">
                     <label>Full Name:</label>
-                    <input type="email" class="form-control" placeholder="Enter full name" />
+                    <input type="text" class="form-control" placeholder="Enter full name" />
                     <span class="form-text text-muted">Please enter your full name</span>
                 </div>
                 <div class="col-lg-4">
                     <label>Full Name:</label>
-                    <input type="email" class="form-control" placeholder="Enter full name" />
-                    <span class="form-text text-muted">Please enter your full name</span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-lg-4">
-                    <label>Full Name:</label>
-                    <input type="email" class="form-control" placeholder="Enter full name" />
-                    <span class="form-text text-muted">Please enter your full name</span>
-                </div>
-                <div class="col-lg-4">
-                    <label>Full Name:</label>
-                    <input type="email" class="form-control" placeholder="Enter full name" />
-                    <span class="form-text text-muted">Please enter your full name</span>
-                </div>
-                <div class="col-lg-4">
-                    <label>Full Name:</label>
-                    <input type="email" class="form-control" placeholder="Enter full name" />
+                    <select class="form-control" id="IsDiscontinued" name="IsDiscontinued">
+                        <option selected="selected" value="0">Hayır</option>
+                        <option value="1">Evet</option>
+                    </select>
                     <span class="form-text text-muted">Please enter your full name</span>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-lg-4">
                     <label>Full Name:</label>
-                    <input type="email" class="form-control" placeholder="Enter full name" />
+                    <input type="text" class="form-control" placeholder="Enter full name" />
                     <span class="form-text text-muted">Please enter your full name</span>
                 </div>
                 <div class="col-lg-4">
                     <label>Full Name:</label>
-                    <input type="email" class="form-control" placeholder="Enter full name" />
+                    <input type="text" class="form-control" placeholder="Enter full name" />
                     <span class="form-text text-muted">Please enter your full name</span>
                 </div>
                 <div class="col-lg-4">
                     <label>Full Name:</label>
-                    <input type="email" class="form-control" placeholder="Enter full name" />
+                    <input type="text" class="form-control" placeholder="Enter full name" />
+                    <span class="form-text text-muted">Please enter your full name</span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-lg-4">
+                    <label>Full Name:</label>
+                    <input type="text" class="form-control" placeholder="Enter full name" />
+                    <span class="form-text text-muted">Please enter your full name</span>
+                </div>
+                <div class="col-lg-4">
+                    <label>Full Name:</label>
+                    <input type="text" class="form-control" placeholder="Enter full name" />
+                    <span class="form-text text-muted">Please enter your full name</span>
+                </div>
+                <div class="col-lg-4">
+                    <label>Full Name:</label>
+                    <input type="text" class="form-control" placeholder="Enter full name" />
                     <span class="form-text text-muted">Please enter your full name</span>
                 </div>
             </div>
